Sign in with Google

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DriveList</string>
+    <string name="default_web_client_id">1063637134638-v816om6gg24utetk2dspjth8bhrk62b1.apps.googleusercontent.com</string>
 </resources>
