--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">DriveList</string>
     <string name="sign_in_google">Continue with Google</string>
-    <string name="default_web_client_id">1063637134638-v816om6gg24utetk2dspjth8bhrk62b1.apps.googleusercontent.com</string>
+    <string name="language_display_es">Spanish</string>
+    <string name="language_display_en">English</string>
+    <string name="settings_title">Settings</string>
+    <string name="settings_language_label">Language</string>
+    <string name="settings_select_language">Select Language</string>
 </resources>
