--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
 
     <string name="label_select_a_color">Selecciona un color...</string>
     <string name="label_car_color">Color del Vehículo</string>
+    <string name="label_brand">Marca</string>
 </resources>
