--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,20 @@
     <string name="car_color_royal_purple">Púrpura Real</string>
     <string name="car_color_graphite_gray">Gris Grafito</string>
 
-    <string name="label_select_a_color">Selecciona un color...</string>
+
+    <string name="label_select_a_color">Selecciona un color…</string>
     <string name="label_car_color">Color del Vehículo</string>
     <string name="label_brand">Marca</string>
+
+    <string name="screen_title_settings">Configuración</string>
+    <string name="screen_title_profile">Perfil</string>
+    <string name="screen_title_login">Iniciar Sesión</string>
+    <string name="screen_title_register">Registro</string>
+    <string name="screen_title_welcome">Bienvenido</string>
+    <string name="screen_title_home">Inicio</string>
+    <string name="screen_title_search">Buscar</string>
+    <string name="screen_title_sell">Vender</string>
+    <string name="screen_title_favorites">Favoritos</string>
+    <string name="screen_title_chat">Chat</string>
+    <string name="screen_title_car_detail">Detalles del Coche</string>
 </resources>
