--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,16 +6,16 @@
     <string name="settings_title">Configuración</string>
     <string name="settings_language_label">Idioma</string>
     <string name="settings_select_language">Seleciona un idioma</string>
-    <string name="car_color_fire_red">Rojo Fuego</string>
-    <string name="car_color_ocean_blue">Azul Océano</string>
-    <string name="car_color_emerald_green">Verde Esmeralda</string>
-    <string name="car_color_midnight_black">Negro Medianoche</string>
-    <string name="car_color_snow_white">Blanco Nieve</string>
-    <string name="car_color_silver_stone">Gris Plata</string>
-    <string name="car_color_sunglow_yellow">Amarillo Solar</string>
-    <string name="car_color_vibrant_orange">Naranja Vibrante</string>
-    <string name="car_color_royal_purple">Púrpura Real</string>
-    <string name="car_color_graphite_gray">Gris Grafito</string>
+    <string name="car_color_fire_red">Rojo</string>
+    <string name="car_color_ocean_blue">Azul</string>
+    <string name="car_color_emerald_green">Verde</string>
+    <string name="car_color_midnight_black">Negro</string>
+    <string name="car_color_snow_white">Blanco</string>
+    <string name="car_color_silver_stone">Gris</string>
+    <string name="car_color_sunglow_yellow">Amarillo</string>
+    <string name="car_color_vibrant_orange">Naranja</string>
+    <string name="car_color_royal_purple">Púrpura</string>
+    <string name="car_color_graphite_gray">Gris</string>
 
 
     <string name="label_select_a_color">Selecciona un color…</string>
