--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="screen_title_search">Buscar</string>
     <string name="screen_title_sell">Vender</string>
     <string name="screen_title_favorites">Favoritos</string>
+    <string name="screen_title_edit">Editar vehiculo</string>
     <string name="screen_title_chat">Chat</string>
     <string name="screen_title_car_detail">Detalles del Coche</string>
     <string name="screen_title_chat_detail">Conversaciones</string>
