--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -20,7 +20,7 @@
     <string name="label_select_a_color">Select a color…</string>
     <string name="label_car_color">Vehicle Color</string>
     <string name="label_brand">Brand</string>
-
+    <string name="screen_about">About us</string>
     <string name="screen_title_settings">Settigns</string>
     <string name="screen_title_profile">Profile</string>
     <string name="screen_title_login">Login</string>
@@ -34,6 +34,15 @@
     <string name="screen_title_chat">Chat</string>
     <string name="screen_title_car_detail">Car Details</string>
     <string name="screen_title_chat_detail">Conversations</string>
+
+    <string name="theme_light">Light</string>
+    <string name="theme_dark">Dark</string>
+    <string name="theme_system">System</string>
+    <string name="settings_section_appearance">Appearance</string>
+    <string name="settings_section_language">Language</string>
+    <string name="settings_section_account">Account and Security</string>
+    <string name="settings_change_password">Change Password</string>
+    <string name="settings_change_password_description">You will receive an email to reset your password</string>
 
 
 </resources>
